prevent overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,8 +15,8 @@ body, html {
 }
 #svg {
   /*border: 1px solid black;*/
-  width: 44in;
-  height: 66in;
+  width: 100vw;
+  height: 100vh;
 }
 #download-form {
   position: fixed;
